--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       <input id="taskInput" type="text" placeholder="What needs to be done?">
       <div class="tasks">
       </div>
+
+      <div class="tasks__info">
+        <p class="tasks__total">Total tasks: 0</p>
+        <p class="tasks__complete">Tasks complete: 0</p>
+        <p class="tasks__nocomplete">Tasks: 0</p>
+      </div>
     </div>
   </div>
 
